Updated features or fixed bugs

--- a/src/app/modules/user/user-layout/user-layout.component.html
+++ b/src/app/modules/user/user-layout/user-layout.component.html
@@ -3,10 +3,14 @@
 
   <span class="spacer"></span>
 
-  <button mat-button routerLink="/user/home">Home</button>
-  <button mat-button routerLink="/user/categories">Categories</button>
-  <button mat-button routerLink="/user/cart">Cart</button>
-  <button mat-button routerLink="/user/profile">Profile</button>
+  <button mat-button routerLink="/user/home" routerLinkActive="active">Home</button>
+
+  <button mat-button routerLink="/user/cart" routerLinkActive="active">
+    🛒 Cart
+    <span class="cart-badge" *ngIf="(cartCount$ | async) as count">{{ count }}</span>
+  </button>
+
+  <button mat-button routerLink="/user/profile" routerLinkActive="active">Profile</button>
 
   <span class="spacer"></span>
 
