--- a/src/app/modules/user/product-card/product-card.component.html
+++ b/src/app/modules/user/product-card/product-card.component.html
@@ -19,7 +19,8 @@
       </span>
     </div>
 
-    <button mat-raised-button color="primary" (click)="addToCart()">
+    <button mat-raised-button color="primary" (click)="addToCart(product)">
+
       🛒 Add to Cart
     </button>
   </div>
