--- a/src/app/modules/user/product-card/product-card.component.scss
+++ b/src/app/modules/user/product-card/product-card.component.scss
@@ -110,3 +110,10 @@
     margin: 0.5rem auto;
   }
 }
+.fitcart-snackbar {
+  background: linear-gradient(45deg, #1976d2, #42a5f5);
+  color: #fff;
+  font-weight: 600;
+  border-radius: 8px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+}
