--- a/src/app/modules/user/product-card/product-card.component.html
+++ b/src/app/modules/user/product-card/product-card.component.html
@@ -1,27 +1,36 @@
-<mat-card class="product-card">
+<mat-card class="product-card light-card">
+
   <div class="product-image">
     <img
       [src]="product.imageUrl || 'https://via.placeholder.com/250'"
       alt="{{ product.name }}"
     />
+    <span class="discount-badge" *ngIf="product.discount">
+      -{{ product.discount }}%
+    </span>
   </div>
 
   <div class="product-info">
-    <h3 class="product-name" matTooltip="{{ product.name }}">{{ product.name }}</h3>
-    <p class="product-description" matTooltip="{{ product.description }}">
+    <h3 class="product-name">{{ product.name }}</h3>
+
+    <p class="product-description">
       {{ product.description || 'No description available' }}
     </p>
 
-    <div class="price-section">
+    <div class="price-box">
       <span class="price">₹{{ product.price }}</span>
-      <span *ngIf="product.discount" class="discount">
-        -{{ product.discount }}%
+
+      <span class="mrp" *ngIf="product.discount">
+        ₹{{ (product.price / (1 - (product.discount / 100))) | number:'1.0-0' }}
       </span>
     </div>
 
-    <button mat-raised-button color="primary" (click)="addToCart(product)">
-
-      🛒 Add to Cart
+    <button mat-raised-button class="add-cart-btn light-btn"
+      (click)="addToCart(product)">
+      <mat-icon>shopping_cart</mat-icon>
+      Add to Cart
     </button>
+
   </div>
+
 </mat-card>
